--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html{
+  background-color: blueviolet;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container-fluid{
+  background-color: blueviolet;
+}
+.btn{
+  background-color: brown;
+}
+input[type="text"]
+{
+  background-color: transparent;
+  color:antiquewhite;
+}
+input[type="text"]:focus
+{
+  background-color: transparent;
+  color:antiquewhite;
 }
